Fixed Off-center Title

--- a/main.css
+++ b/main.css
@@ -31,3 +31,6 @@ footer{
 iframe{
 	background-color: white;
 }
+.hidden{
+	visibility: hidden;
+}
